--- a/competition/templates/compdetail.html
+++ b/competition/templates/compdetail.html
@@ -25,7 +25,7 @@
     background-size: 200% auto;
     color: white;
     box-shadow: 0 0 20px #eee;
-    border-radius: 10px;
+    border-radius: 0.5em;
     display: block;
 }
  .btn-grad:hover {
@@ -50,7 +50,7 @@
      background-size: 200% auto;
      color: white;
      box-shadow: 0 0 20px #eee;
-     border-radius: 10px;
+     border-radius: 0.5em;
 }
  .btn-participate:hover {
      background-position: right center;
@@ -75,7 +75,7 @@
     background: white;
     box-shadow: 0 0 7px 2px #d1d1d1;
     margin: 0 auto;
-    border-radius: 15px;
+    border-radius: 0.5em;
     overflow-y: hidden;
     overflow-x: auto;
 }
@@ -111,7 +111,7 @@
     box-shadow: 0 0 0px 2px #d1d1d1;
     background: white;
     margin:0 auto 1rem auto;
-    border-radius: 15px ;
+    border-radius: 0.5em;
  }
  .drag{
      font-size: 1.5rem;
@@ -121,7 +121,7 @@
      border: 2px dashed #4facfe;
      height: 22rem;
      width: 100%;
-     border-radius: 5px;
+     border-radius: 0.5em;
      display: flex;
      align-items: center;
      justify-content: center;
@@ -200,7 +200,7 @@
      margin: 0 auto;
      justify-content: center;
      align-items: center;
-     border-radius: 15px;
+     border-radius: 0.5em;
 }
  .date {
      padding: 28px 11px 18px 11px;
@@ -230,7 +230,7 @@
  .sub-table-wrapper{
      width: 100%;
      margin-bottom: 0.2rem;
-     border-radius: 15px 15px 0 0;
+     border-radius: 0.5em 0.5em 0 0;
      overflow: auto;
 }
  .sub-table{
@@ -329,6 +329,15 @@
          padding: 28px 5px 18px 5px;
     }
 }
+
+li {
+  font-size: 13px;
+}
+
+li p {
+   font-weight: 600;
+}
+
 </style>
 
 <div class="container">
@@ -339,8 +348,8 @@
                     <div class="columns" style="margin: unset; justify-content: center; align-items: center;">
                         <!-- Story -->
                         {% if competion.image %}
-                        <div class="limiter comp-img" style="display: flex; justify-content: center; margin: 0 auto;">
-                            <img src="{{competion.image.url}}" alt="" data-demo-src="{{competion.image.url}}" style="border-radius: 15px;width: 100%;height: 100%; object-fit: contain;">
+                        <div class="limiter" style="display: flex; justify-content: center; margin: 0 auto;">
+                            <img src="{{competion.image.url}}" alt="" data-demo-src="{{competion.image.url}}" style="border-radius: 0.5em;width: 100%;height: 350px; object-fit: cover;">
                         </div>
                         {% endif %}
                     </div>
@@ -484,7 +493,7 @@
 
                                 <i class="fas fa-th fa-lg" id="icon"></i>
 
-                                <p>OVERVIEW</p>
+                                <p>Overview</p>
 
                             </li>
                         </div>
@@ -493,7 +502,7 @@
 
                                 <i class="fas fa-hourglass-half fa-lg" id="icon"></i>
 
-                                <p>CHALLENGE</p>
+                                <p>Challenge</p>
 
 
 
@@ -504,7 +513,7 @@
 
                                 <i class="far fa-list-alt fa-lg" id="icon"></i>
 
-                                <p>RULES</p>
+                                <p>Rules</p>
 
 
 
@@ -515,7 +524,7 @@
 
                                 <i class="far fa-copy fa-lg" id="icon"></i>
 
-                                <p>EVALUATION</p>
+                                <p>Evaluation</p>
 
                             </li>
                         </div>
@@ -524,7 +533,7 @@
 
                                 <i class="fas fa-trophy fa-lg" id="icon"></i>
 
-                                <p>PRIZE</p>
+                                <p>Prize</p>
 
                             </li>
                         </div>
@@ -534,7 +543,7 @@
 
                                 <i class="fas fa-database fa-lg" id="icon"></i>
 
-                                <p>DATA</p>
+                                <p>Data</p>
 
                             </li>
 
@@ -545,7 +554,7 @@
 
                                 <i class="fas fa-crown fa-lg" id="icon"></i>
 
-                                <p>RANKING</p>
+                                <p>Ranking</p>
 
                             </li>
 
