--- a/analytics/templates/analytics/skeleton_post_create.html
+++ b/analytics/templates/analytics/skeleton_post_create.html
@@ -32,6 +32,7 @@
 
                 {% for field in form %}
                 <div class="column {% if field.label == 'Description' %} is-12 {% else %} is-6 {% endif %}">
+                    <div class="field field-group">
 
                         <div class="control has-icon">
                             {{ field.errors }}
