--- a/analytics/templates/analytics/skeleton_post_update.html
+++ b/analytics/templates/analytics/skeleton_post_update.html
@@ -80,38 +80,38 @@
                     </div>
                 </div>
 
-            <div class="column {% if field.label == 'Description' %} is-12 {% else %} is-6 {% endif %}">
-                    <div class="field field-group">
+<!--            <div class="column {% if field.label == 'Description' %} is-12 {% else %} is-6 {% endif %}">-->
+<!--                    <div class="field field-group">-->
 
-                        <div class="control has-icon">
-                            {{ form.image2|as_crispy_field }}
-                        </div>
-                    </div>
-                </div>
-            <div class="column {% if field.label == 'Description' %} is-12 {% else %} is-6 {% endif %}">
-                    <div class="field field-group">
+<!--                        <div class="control has-icon">-->
+<!--                            {{ form.image2|as_crispy_field }}-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            <div class="column {% if field.label == 'Description' %} is-12 {% else %} is-6 {% endif %}">-->
+<!--                    <div class="field field-group">-->
 
-                        <div class="control has-icon">
-                            {{ form.image3|as_crispy_field }}
-                        </div>
-                    </div>
-                </div>
-            <div class="column {% if field.label == 'Description' %} is-12 {% else %} is-6 {% endif %}">
-                    <div class="field field-group">
+<!--                        <div class="control has-icon">-->
+<!--                            {{ form.image3|as_crispy_field }}-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            <div class="column {% if field.label == 'Description' %} is-12 {% else %} is-6 {% endif %}">-->
+<!--                    <div class="field field-group">-->
 
-                        <div class="control has-icon">
-                            {{ form.image4|as_crispy_field }}
-                        </div>
-                    </div>
-                </div>
-            <div class="column {% if field.label == 'Description' %} is-12 {% else %} is-6 {% endif %}">
-                    <div class="field field-group">
+<!--                        <div class="control has-icon">-->
+<!--                            {{ form.image4|as_crispy_field }}-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            <div class="column {% if field.label == 'Description' %} is-12 {% else %} is-6 {% endif %}">-->
+<!--                    <div class="field field-group">-->
 
-                        <div class="control has-icon">
-                            {{ form.image5|as_crispy_field }}
-                        </div>
-                    </div>
-                </div>
+<!--                        <div class="control has-icon">-->
+<!--                            {{ form.image5|as_crispy_field }}-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
 
             <div class="column {% if field.label == 'Description' %} is-12 {% else %} is-6 {% endif %}" style="background-color: #f5f5f5;border-radius: 0.5em;padding: 0.5em;margin-top: 1em;">
 
