--- a/analytics/templates/analytics/plan_create.html
+++ b/analytics/templates/analytics/plan_create.html
@@ -41,7 +41,8 @@
     }
 
     small{
-      color: red;
+      padding: 1em;
+      font-size: 12px;
     }
 </style>
 {% with 'ckeditorwidget,textarea' as widget_list %}
