--- a/chat/templates/chat/modal.html
+++ b/chat/templates/chat/modal.html
@@ -179,7 +179,7 @@
                         <!-- List -->
                         <ul class="list-group list-group-flush">
                             <li class="list-group-item">
-                                <a href="" id="receiver_profile_url" class="text-reset" data-theme-toggle="tab" title="Profile" data-bs-dismiss="modal">View Profile</a>
+                                <a href="" id="receiver_profile_url" class="text-reset" title="Profile">View Profile</a>
                             </li>
 
 {#                            <li class="list-group-item">#}
