--- a/chat/templates/chat/offcanvas.html
+++ b/chat/templates/chat/offcanvas.html
@@ -7,10 +7,10 @@
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-left"><polyline points="15 18 9 12 15 6"></polyline></svg>
         </a>
 
-        <!-- <div class="visibility-xl-invisible overflow-hidden text-center">
-            <h5 class="text-truncate">Ollie Chandler</h5>
-            <p class="text-truncate">last seen 5 minutes ago</p>
-        </div> -->
+        <div class="overflow-hidden text-center mt-1" id="open-notebook">
+            <a href="{% url 'user:redirect-notebook' %}" class="btn btn-primary btn-sm">Open Notebook</a>
+            <!-- <p class="text-truncate">last seen 5 minutes ago</p> -->
+        </div>
 
         <!-- Dropdown -->
         <div class="dropdown" id="offcanvas-dropdown">
@@ -74,7 +74,7 @@
             <div class="row gy-6">
                 <div class="col-12">
                     <div class="avatar avatar-xl mx-auto">
-                        <img src="" id="offcanvas_profile_img_url" class="avatar-img" style="object-fit: cover;">
+                        <img src="" id="offcanvas_profile_img_url" class="avatar-img" style="object-fit: cover; cursor: pointer;" onclick="showUserProfile()">
 
                         <!-- <a href="#" class="badge badge-lg badge-circle bg-primary text-white border-outline position-absolute bottom-0 end-0">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-plus"><line x1="12" y1="5" x2="12" y2="19"></line><line x1="5" y1="12" x2="19" y2="12"></line></svg>
@@ -99,13 +99,11 @@
                     Profile
                 </a>
             </li>
-
             <li class="nav-item">
                 <a class="nav-link" data-bs-toggle="pill" href="#offcanvas-tab-media" role="tab" aria-controls="offcanvas-tab-media" aria-selected="true">
                     Media
                 </a>
             </li>
-
             <li class="nav-item">
                 <a class="nav-link" data-bs-toggle="pill" href="#offcanvas-tab-files" role="tab" aria-controls="offcanvas-tab-files" aria-selected="false">
                     Files
@@ -126,7 +124,6 @@
                                 <h5>Phone</h5>
                                 <p  id="offcanvas_profile_">{{ request.user.phone_number }}</p>
                             </div>
-
                             <div class="col-auto">
                                 <div class="btn btn-sm btn-icon btn-dark">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-phone-call"><path d="M15.05 5A5 5 0 0 1 19 8.95M15.05 1A9 9 0 0 1 23 8.94m-1 7.98v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"></path></svg>
@@ -179,7 +176,6 @@
                                 <h5>Location</h5>
                                 <p>USA, Houston</p>
                             </div>
-
                             <div class="col-auto">
                                 <div class="btn btn-sm btn-icon btn-dark">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-globe"><circle cx="12" cy="12" r="10"></circle><line x1="2" y1="12" x2="22" y2="12"></line><path d="M12 2a15.3 15.3 0 0 1 4 10 15.3 15.3 0 0 1-4 10 15.3 15.3 0 0 1-4-10 15.3 15.3 0 0 1 4-10z"></path></svg>
@@ -194,7 +190,6 @@
                                 <h5>E-mail</h5>
                                 <p>{{ request.user.email }}</p>
                             </div>
-
                             <div class="col-auto">
                                 <div class="btn btn-sm btn-icon btn-dark">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-mail"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path><polyline points="22,6 12,13 2,6"></polyline></svg>
@@ -211,7 +206,6 @@
                                 <h5>Notifications</h5>
                                 <p>Enable sound notifications</p>
                             </div>
-
                             <div class="col-auto">
                                 <div class="form-check form-switch">
                                     <input class="form-check-input" type="checkbox" id="accordion-security-check-5">
