--- a/competition/templates/complist.html
+++ b/competition/templates/complist.html
@@ -224,9 +224,9 @@
                     </a>
                     <p class="blog-post_text">{{ list.overview | safe |truncatewords:35 }}</p>
 
-                    <h3 class="activeBtn blog-post_cta" align="center" style="color: white;padding: 0.5em 3em;width: 150px;"> {{list.status}}</h3>
+                    <h3 class="activeBtn blog-post_cta" align="center" style="color: white;padding: 0.5em 3em;min-width: 150px;"> {{list.status}}</h3>
 
-                    <h3 class="beginBtn blog-post_cta" align="center" style="color:#636369;width: 150px;">{{list.level}}</h3>
+                    <h3 class="beginBtn blog-post_cta" align="center" style="color:#636369;min-width: 150px;">{{list.level}}</h3>
 
                 </div>
             </div>
@@ -252,9 +252,9 @@
                     </a>
                     <p class="blog-post_text">{{ list.overview | safe |truncatewords:35 }}</p>
 
-                    <h3 class="activeBtn blog-post_cta" align="center" style="color: white;padding: 0.5em 3em;width: 150px;"> {{list.status}}</h3>
+                    <h3 class="activeBtn blog-post_cta" align="center" style="color: white;padding: 0.5em 3em;min-width: 150px;"> {{list.status}}</h3>
 
-                    <h3 class="beginBtn blog-post_cta" align="center" style="color:#636369;width: 150px;">{{list.level}}</h3>
+                    <h3 class="beginBtn blog-post_cta" align="center" style="color:#636369;min-width: 150px;">{{list.level}}</h3>
 
                     </div>
                 </div>
@@ -279,9 +279,9 @@
                     </a>
                     <p class="blog-post_text">{{ list.overview | safe |truncatewords:35 }}</p>
 
-                    <h3 class="activeBtn blog-post_cta" align="center" style="color: white;padding: 0.5em 3em;width: 150px;"> {{list.status}}</h3>
+                    <h3 class="activeBtn blog-post_cta" align="center" style="color: white;padding: 0.5em 3em;min-width: 150px;"> {{list.status}}</h3>
 
-                    <h3 class="beginBtn blog-post_cta" align="center" style="color:#636369;width: 150px;">{{list.level}}</h3>
+                    <h3 class="beginBtn blog-post_cta" align="center" style="color:#636369;min-width: 150px;">{{list.level}}</h3>
 
 
                     </div>
