--- a/users/templates/users/user_personal_info.html
+++ b/users/templates/users/user_personal_info.html
@@ -51,6 +51,18 @@
                                                             </div>
                                                         </div>
                                                     </div>
+
+<!--                                                    {% if not user_friend %}-->
+<!--                                                    <div class="field field-group">-->
+<!--                                                        <label>{{form.username.label}}</label>-->
+<!--                                                        <div class="control has-icon">-->
+<!--                                                            <input type="text" class="input is-fade" {% if user_friend %} disabled {% endif %} value="{{form.username.value}}" name="{{form.username.name}}">-->
+<!--                                                            <div class="form-icon">-->
+<!--                                                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-user"><path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path><circle cx="12" cy="7" r="4"></circle></svg>-->
+<!--                                                            </div>-->
+<!--                                                        </div>-->
+<!--                                                    </div>-->
+<!--                                                    {% endif %}-->
                                                     <!--Field-->
                                                     {% comment %}
                                                     {% if not user_friend %}
