--- a/chat/templates/chat/chat-direct.html
+++ b/chat/templates/chat/chat-direct.html
@@ -11,8 +11,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
 
-    <title> Chat</title>
-    <link rel="icon" type="image/png" href="{% static 'chat/assets/img/favicon.png' %}" />
+    <title> Stellar | Chat</title>
+    <link rel="icon" type="image/png" href="{% static 'images/logo/color-logo.png' %}" />
 
 </head>
 
@@ -106,17 +106,18 @@
             <!-- Navigation -->
             <nav class="navigation d-flex flex-column text-center navbar navbar-light hide-scrollbar">
                 <!-- Brand -->
-                <a href="index.html" title="Messenger" class="d-none d-xl-block mb-6">
-                    <svg version="1.1" width="46px" height="46px" fill="currentColor" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 46 46" enable-background="new 0 0 46 46" xml:space="preserve">
-                        <polygon opacity="0.7" points="45,11 36,11 35.5,1 "/>
-                        <polygon points="35.5,1 25.4,14.1 39,21 "/>
-                        <polygon opacity="0.4" points="17,9.8 39,21 17,26 "/>
-                        <polygon opacity="0.7" points="2,12 17,26 17,9.8 "/>
-                        <polygon opacity="0.7" points="17,26 39,21 28,36 "/>
-                        <polygon points="28,36 4.5,44 17,26 "/>
-                        <polygon points="17,26 1,26 10.8,20.1 "/>
-                    </svg>
+                <a href="/" title="Messenger" class="d-none d-xl-block mb-6">
+<!--                    <svg version="1.1" width="46px" height="46px" fill="currentColor" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 46 46" enable-background="new 0 0 46 46" xml:space="preserve">-->
+<!--                        <polygon opacity="0.7" points="45,11 36,11 35.5,1 "/>-->
+<!--                        <polygon points="35.5,1 25.4,14.1 39,21 "/>-->
+<!--                        <polygon opacity="0.4" points="17,9.8 39,21 17,26 "/>-->
+<!--                        <polygon opacity="0.7" points="2,12 17,26 17,9.8 "/>-->
+<!--                        <polygon opacity="0.7" points="17,26 39,21 28,36 "/>-->
+<!--                        <polygon points="28,36 4.5,44 17,26 "/>-->
+<!--                        <polygon points="17,26 1,26 10.8,20.1 "/>-->
+<!--                    </svg>-->
 
+                    <img class="logo light-image" src="{% static 'images/logo/color-logo.png' %}" width="70px" height="70px" alt="">
                 </a>
 
                 <!-- Nav items -->
@@ -715,8 +716,8 @@
                                                 </div>
 
                                                 <div class="col overflow-hidden">
-                                                    <h5 class="text-truncate" id="chatPanel-username"></h5>
-{#                                                    <p class="text-truncate">is typing<span class='typing-dots'><span>.</span><span>.</span><span>.</span></span></p>#}
+                                                    <h5 class="text-truncate" id="chatPanel-username" style="cursor: pointer;" onclick="showUserProfile()"></h5>
+{#                                                  <p class="text-truncate">is typing<span class='typing-dots'><span>.</span><span>.</span><span>.</span></span></p>#}
                                                 </div>
                                             </div>
                                         </div>
