--- a/home/templates/home/plan.html
+++ b/home/templates/home/plan.html
@@ -35,7 +35,7 @@
 <!-- Content -->
 <div class="page-content">
     <!-- inner page banner -->
-        <div class="dlab-bnr-inr bg-custom" style="background-image:url('{% static 'images/background/bg1.jpg' %}');">
+        <div class="dlab-bnr-inr bg-custom" style="background-image:url('{% static 'images/background/bg1.jpg' %}');height: 280px;">
         <div class="container">
             <div class="dlab-bnr-inr-entry text-white">
                 <h1>Our Plans</h1>
