--- a/chat/templates/chat/chat-direct.html
+++ b/chat/templates/chat/chat-direct.html
@@ -199,10 +199,10 @@
                     <li class="nav-item">
                         <!-- <a href="#" class="nav-link p-0 mt-lg-2" data-bs-toggle="modal" data-bs-target="#modal-sender"> -->
                         <a  href="{% url 'user:profile' %}" class="nav-link p-0 mt-lg-2">
-                            <div class="avatar avatar-online avatar-md p-2">
+                            <div class="avatar avatar-md p-2">
                                 <img src="{{ request.user.get_profile_img }}" alt="#" class="avatar-img" style="object-fit: cover;">
                             </div>
-                            <!-- <div class="avatar avatar-online avatar-xs d-xl-none">
+                            <!-- <div class="avatar avatar-xs d-xl-none">
                                 <img class="avatar-img" src="{{ request.user.get_profile_img }}" alt="">
                             </div> -->
                         </a>
@@ -700,18 +700,16 @@
                                 <!-- Mobile: close -->
 
                                 <!-- Content -->
-                                <div class="col-8 col-xl-12">
+                                <div class="col-7 col-xl-12">
                                     <div class="row align-items-center text-center text-xl-start">
                                         <!-- Title -->
                                         <div class="col-12 col-xl-6">
                                             <div class="row align-items-center gx-5">
                                                 <div class="col-auto">
-                                                    <div class="avatar avatar-online d-none d-xl-inline-block">
-
+                                                    <div class="avatar d-none d-xl-inline-block">
                                                         <a href="#" id="setReceiverModal" class="avatar avatar-sm" data-bs-toggle="modal" data-bs-target="#modal-receiver">
                                                             <img class="avatar-img" style="object-fit: cover;" id="chatPanel-image" alt="#" src="">
                                                         </a>
-
                                                     </div>
                                                 </div>
 
@@ -746,7 +744,13 @@
                                                         </button>
                                                     </form>
                                                 </div>
-                                                
+
+                                                <div class="col-auto open-notebook" title="Open notebook">
+                                                    <a href="{% url 'user:redirect-notebook' %}" class="btn btn-sm btn-primary">
+                                                        <!-- <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-book-open"><path d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"></path><path d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"></path></svg> -->
+                                                        Open notebook
+                                                    </a>
+                                                </div>
 
                                                 <div class="col-auto">
                                                     <a href="#" class="icon icon-lg text-muted" data-bs-toggle="offcanvas" data-bs-target="#offcanvas-more" aria-controls="offcanvas-more">
@@ -827,6 +831,11 @@
                                 <!-- Content -->
 {#                                {% include 'chat/chat-js.html' %}#}
                                 <!-- Mobile: more -->
+                                <div class="col-1 d-xl-none p-0 text-center" title="Open notebook">
+                                    <a href="{% url 'user:redirect-notebook' %}" class="btn btn-md p-1 open-notebook">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-book-open"><path d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"></path><path d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"></path></svg>
+                                    </a>
+                                </div>
                                 <div class="col-2 d-xl-none text-end">
                                     <a href="#" class="icon icon-lg text-muted" data-bs-toggle="offcanvas" data-bs-target="#offcanvas-more" aria-controls="offcanvas-more">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-more-vertical"><circle cx="12" cy="12" r="1"></circle><circle cx="12" cy="5" r="1"></circle><circle cx="12" cy="19" r="1"></circle></svg>
