--- a/chat/templates/chat/group-chat-js.html
+++ b/chat/templates/chat/group-chat-js.html
@@ -620,9 +620,15 @@
 
         let group_chatSocket_chat_{{ group.id }};
         let receiver_group_{{group.id }} = "{{group.id }}";
+	
+	wsStart = 'ws://';
+    loc = window.location;
+    if(loc.protocol === 'https:'){
+        wsStart = 'wss://';
+    }
         group_chatSocket_chat_{{ group.id }} = new ReconnectingWebSocket(
-            'ws://' + window.location.host +
-            '/ws/chat/group/' + "{{ group.name }}" + '/'+ "{{ request.user.id }}" +'/');
+            wsStart + window.location.host +
+            '/ws/chat/group/' + "{{ group.name }}" + '/'+ "{{ request.user.id }}" +'/');        
 
         group_websocket_dict["group_chatSocket_chat_{{ group.name }}"] = group_chatSocket_chat_{{ group.id }};
 
